--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
+    "antd": "^5.11.2",
     "graphql": "^16.8.1",
     "next": "14.0.1",
     "react": "^18",
