--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.7",
     "antd": "^5.11.2",
+    "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
     "next": "14.0.1",
     "react": "^18",
