--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "fastify": "^4.24.3",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "graphql-upload": "^16.0.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
