--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.7",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.11.2",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
