--- a/Client/package.json
+++ b/Client/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.2",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
