--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@as-integrations/fastify": "^2.1.1",
     "@fastify/cors": "^8.4.1",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.24.3",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
