--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^15.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.4.4",
     "nodemon": "^3.0.1"
   }
