--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.11.2",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
