--- a/Client/package.json
+++ b/Client/package.json
@@ -18,9 +18,9 @@
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
