--- a/Client/package.json
+++ b/Client/package.json
@@ -13,15 +13,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^1.9.7",
-    "antd": "^5.11.2",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-toastify": "^10.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
