--- a/Client/package.json
+++ b/Client/package.json
@@ -13,8 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.9.7",
-    "antd": "^5.11.2",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
