--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "animate.css": "^4.1.1",
     "apollo-upload-client": "^18.0.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
