--- a/Client/package.json
+++ b/Client/package.json
@@ -18,13 +18,15 @@
     "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
     "apollo-upload-client": "^18.0.1",
+    "date-fns": "^3.3.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "react-toastify": "^10.0.3"
+    "react-toastify": "^10.0.3",
+    "react-tooltip": "^5.26.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
