--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
     "apollo-upload-client": "^18.0.1",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
